# veridian-controller

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.sh  entrypoint.sh  flake.nix  hm-unit-example.nix  nixos-unit-example.nix  nvidia-settings.sudoers  shell.nix  unit-example.nix  veridian-controller.service  veridian-controller.toml
.github/: FUNDING.yml  build.yaml
.github/workflows/: build.yaml  nix.yaml
src/: commands.rs  config.rs  config_test.rs  filelock.rs  helpers.rs  main.rs  thermalmanager.rs  thermalmanager_test.rs
