[package]
name = "veridian-controller"
version = "0.2.7"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
toml = "0.8.20"
chrono = "0.4.38"
nix = "0.29.0"
